force-app/main/default/objects/sugati__Calculation_Variables__c/sugati__Calculation_Variables__c.object-meta.xml
<CustomObject>
    <label>Calculation Variables</label>
    <nameField>
        <displayFormat>CV-{0000}</displayFormat>
        <label>Calculation Variables Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Calculation Variables</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>