force-app/main/default/objects/sugati__Calculation_Variables__c/fields/sugati__CV_APC_Charges__c.field-meta.xml
<CustomField>
    <fullName>sugati__CV_APC_Charges__c</fullName>
    <label>APC Charges</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>