force-app/main/default/objects/sugati__Calculation_Variables__c/fields/sugati__CV_Arrival_Presents__c.field-meta.xml
<CustomField>
    <fullName>sugati__CV_Arrival_Presents__c</fullName>
    <label>Arrival Presents</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>