force-app/main/default/objects/sugati__Calculation_Variables__c/fields/sugati__CV_Booking_From__c.field-meta.xml
<CustomField>
    <fullName>sugati__CV_Booking_From__c</fullName>
    <label>Booking From</label>
    <type>Date</type>
</CustomField>