force-app/main/default/objects/sugati__Calculation_Variables__c/fields/sugati__CV_Booking_To__c.field-meta.xml
<CustomField>
    <fullName>sugati__CV_Booking_To__c</fullName>
    <label>Booking To</label>
    <type>Date</type>
</CustomField>